--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 <script>
+	<div
+	  class="fb-like"
+	  data-share="true"
+	  data-width="450"
+	  data-show-faces="true">
+	</div>
+
+
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '1122565244438826',
@@ -20,7 +28,7 @@
      js = d.createElement(s); js.id = id;
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
+   }(document, 'script', 'facebook-jssdk')); 
 </script>
 </body>
 </html>
