--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       if (response.status=="connected") {
         console.log("You're loggued in");
         FB.api('/600250886752341/posts', function(response) {
-           alert(response);
+           console.log(response);
           }); 
       } 
     }); 
