--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 			console.log(peopleWhoLikeThis);
 			var peopleCount = peopleWhoLikeThis.length;
 			for (var i = 0; i < peopleCount; i++) {
+				console.log(peopleWhoLikeThis[i]);
 				var userID = peopleWhoLikeThis[i].id;
 				console.log(userID);
 				var name = getNameFromUserID(userID);
