--- a/index.html
+++ b/index.html
@@ -71,16 +71,15 @@
 			for (var i = 0; i < peopleCount; i++) {
 				console.log(peopleWhoLikeThis[i]);
 				var userID = peopleWhoLikeThis[i].id;
-				//console.log(userID);
 				var name = getNameFromUserID(userID);
-				//console.log(name);
+				console.log(name);
 			};
 		});
 	}
 
 	function getNameFromUserID(id) {
 		FB.api(id, function(response) {
-			return response.name;
+			return response;
 		});
 	}
 
