--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			for (var i = 0; i < peopleCount; i++) {
 				console.log(peopleWhoLikeThis[i]);
 				var userID = peopleWhoLikeThis[i].id;
-				console.log(String(userID);
+				console.log(String(userID));
 				var name = getNameFromUserID(userID);
 				console.log(name);
 			};
