--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
 			for (var i = 0; i < peopleCount; i++) {
 				console.log(peopleWhoLikeThis[i]);
 				var userID = peopleWhoLikeThis[i].id;
-				console.log(String(userID));
+				//console.log(String(userID));
 				var name = getNameFromUserID(String(userID));
-				console.log(name);
 			};
 		});
 	}
 
 	function getNameFromUserID(id) {
 		FB.api(id + '?fields=name', function(response) {
+			console.log(id);
+			console.log(response);
 			return response;
 		});
 	}
