--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		// 	return response.name;
 		// });
 
-		FB.api('id', {fields: 'first_name'}, function(response) {
+		FB.api(id, {fields: 'first_name'}, function(response) {
 			console.log(id);
 			console.log(response);
 			return response;
