--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 		// 	return response.name;
 		// });
 
-		FB.api(id, {fields: 'first_name'}, function(response) {
+		FB.api(id, {fields: 'name'}, function(response) {
 			console.log(id);
-			console.log(response);
+			console.log(response.name);
 			return response;
 		});
 
