--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				var userID = String(peopleWhoLikeThis[i].id);
 				console.log(userID);
 				var name = getNameFromUserID(userID);
-				//console.log(name);
+				console.log(name);
 				if (!(name in names)) {
 					names.push({
 					    key:   name,
@@ -91,13 +91,13 @@
 	}
 
 	function getNameFromUserID(id) {
-
+		var name = "no name";
 		FB.api(id, {fields: 'name'}, function(response) {
 			// console.log(id);
-			console.log(response.name);
-			return response.name;
+			//console.log(response.name);
+			name = response.name;
 		});
-
+		return name;
 	}
 
 
