--- a/index.html
+++ b/index.html
@@ -75,8 +75,14 @@
 				//console.log(peopleWhoLikeThis[i]);
 				var userID = String(peopleWhoLikeThis[i].id);
 				console.log(userID);
-				var name = getNameFromUserID(userID);
-				console.log(name);
+				var name;
+				FB.api(userID, {fields: 'name'}, function(response) {
+					// console.log(id);
+					console.log(response.name);
+					name = response.name;
+				});
+				//var name = getNameFromUserID(userID);
+				//console.log(name);
 				if (!(name in names)) {
 					names.push({
 					    key:   name,
@@ -94,7 +100,7 @@
 		var name = "no name";
 		FB.api(id, {fields: 'name'}, function(response) {
 			// console.log(id);
-			//console.log(response.name);
+			console.log(response.name);
 			name = response.name;
 		});
 		return name;
