--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ var names = [];
 		  	console.log(userID);
 
 		  	var name = getNameFromUserID(userID);
-		  	
+		  	console.log(name);
 		  };
 		});
-
+		console.log(names);
 		// FB.api(id + '/likes', function(response) {
 		// 	// store IDs of people who like this post in array
 		// 	var peopleWhoLikeThis = response.data;
