--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 		  	getNameFromUserID(userID, names);
 
 		  };
+		  console.log(names);
 		});
 
 		// FB.api(id + '/likes', function(response) {
