--- a/index.html
+++ b/index.html
@@ -85,14 +85,15 @@
 			name = response.name;
 			names.push(name);
 			
-			if (!(String(name) in likes)) {
+			if ('Michelle Dinh' in likes)) {
+				console.log("shes already in dict");
+				var numLikes = likes["Michelle Dinh"] + 1;
+				likes[name] = numLikes;
+			} else {
 				likes.push({
 				    key:   name,
 				    value: 1
 				});
-			} else {
-				console.log(name + " already in dict");
-				likes[name] = ++likes[name];
 			}
 
 			console.log(names);
