--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			name = response.name;
 			names.push(name);
 			
-			if ('Michelle Dinh' in likes)) {
+			if ('Michelle Dinh' in likes) {
 				console.log("shes already in dict");
 				var numLikes = likes["Michelle Dinh"] + 1;
 				likes[name] = numLikes;
