--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 			var requestURL = '/600250886752341/posts?limit=100';
 
-			for (var page = 1; page < 3; page++) {
+			for (var page = 0; page < 6; page++) {
 				FB.api(requestURL, 'get', { }, function(response) {
-
+				   console.log(response.data);
 				   postIDs = convertJSONToArray(response);
 
 				   // if posts not null find out who liked/commented each post
