--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 		  if (response.status=="connected") {
 			console.log("You're logged in");
 
-			var requestURL = '/600250886752341/posts?limit=100';
+			
 
-			for (var page = 0; page < 2; page++) {
+			for (var offset = 0; offset < 200; offset += 100) {
+				var requestURL = '/600250886752341/posts?limit=100&offset=' + offset;
+				console.log(requestURL);
+
 				FB.api(requestURL, 'get', { }, function(response) {
+				   console.log(response);
 				   postIDs = convertJSONToArray(response);
 
 				   // if posts not null find out who liked/commented each post
@@ -40,9 +44,6 @@
 				   		};
 				   		
 				   }
-
-				   requestURL = response.paging.next;
-				   console.log(requestURL);
 
 				});
 			} 
