--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				});
 			} 
 			console.log(members);
-
+			publish();
 		  } 
 
 		}); 
@@ -126,7 +126,7 @@
 		         type: 'post',
 		         url: 'https://script.google.com/macros/s/AKfycbzBiG7RgcSMsCUQgWRCxw8DAHbrCbawJOVfHMb-hdif8sA2zaA/exec',
 		         data: members,
-		         success: alert("posted");
+		         success: alert("posted")
 		     });
 	}
 
