--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Like Tracker</title>
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
 
 	var members = [];
