--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		         type: 'post',
 		         url: 'https://script.google.com/macros/s/AKfycbzBiG7RgcSMsCUQgWRCxw8DAHbrCbawJOVfHMb-hdif8sA2zaA/exec',
 		         data: members,
-		         success: alert(members);
+		         success: alert(members)
 		     });
 	}
 
