--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 	        var email = $j('#email').val();
 	        var feed = $j('#feed').val();
 	        if ((name !== "") && (email !== "") && ((feed !== "") && (validateEmail(email)))) {
-	            $j.ajax({
+	            $.ajax({
 	                url: "https://docs.google.com/spreadsheets/d/1NswdXEilN37h1SqSWrEa5SbdkAWq1xzNaj9h9Lf3o70/pubhtml",
 	                data: {"entry.1" : name, "entry.3" : email, "entry.4": feed},
 	                type: "POST",
