--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				});
 			} 
 			console.log(members);
-			if (members.length == totalPosts) {
+			if (members) {
 				makeTable();
 			}
 		  } 
