--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
 		FB.api(requestURL, 'get', { }, function(response) {
 		   console.log(requestURL);
 		   console.log(response);
-		   postIDs = convertJSONToArray(response);
-
+		   if (response.data.length > 0) {
+		   		postIDs = convertJSONToArray(response);
+		   }
 		   // if posts not null find out who liked/commented each post
-		   if (postIDs.length) {
+		   var postCount = postIDs.length;
+		   if (postCount > 0) {
 		   		console.log('valid array');
-		   		var postCount = postIDs.length;
 		   		for (var i = 0; i < postCount; i++) {
 		   			var postID = postIDs[i];
 		   			getLikesOfPostWithID(postID);
