--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 			var name = key;
 			var likes = members[key]["likes"];
 			var comments = members[key]["comments"];
+			console.log(key);
 			addTableRow(name, likes, comments);
 		}
 	}
