--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		   				
 		   		} 
 		   }
-		   makeTable();
+		   //makeTable();
 		});
 	}
 
@@ -146,9 +146,11 @@
 
 		  		if (members[name] == undefined) {
 		  			members[name] = { "likes" : 1, "comments" : 0 };
+		  			addTableRow(name, 1, 0);
 		  		} else {
 		  			var numLikes = members[name]["likes"] + 1;
 		  			members[name]["likes"] = numLikes;
+		  			$('#' + name).find('.comments').innerHTML = numLikes;
 		  		}
 		  	});
 
@@ -169,9 +171,11 @@
 
 		  		if (members[name] == undefined) {
 		  			members[name] = { "likes" : 0, "comments" : 1 };
+		  			addTableRow(name, 0, 1);
 		  		} else {
 		  			var numComments = members[name]["comments"] + 1;
 		  			members[name]["comments"] = numComments;
+		  			$('#' + name).find('.likes').innerHTML = numComments;
 		  		}
 
 		  	});
@@ -185,7 +189,7 @@
 		console.log(members);
 		for (var key in members) {
 			console.log(key);
-			
+
 			var name = key;
 			var likes = members[key]["likes"];
 			var comments = members[key]["comments"];
@@ -194,11 +198,11 @@
 		}
 	}
 
-	function addTableRow(name, likes, comments) {
-		var row = $('<tr></tr>');
-		var n = $('<td>' + name + '</td>');
-		var l = $('<td>' + likes + '</td>');
-		var c = $('<td>' + comments + '</td>');
+	function addTableRow(name, likes, comments, name) {
+		var row = $('<tr id="' + name + '"></tr>');
+		var n = $('<td class="name">' + name + '</td>');
+		var l = $('<td class="likes">' + likes + '</td>');
+		var c = $('<td class="comments">' + comments + '</td>');
 		row.append(n);
 		row.append(l);
 		row.append(c);
